# basicmath

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml
basicmath/ops/: addition.py  subtraction.py
scripts/: demo.py
tests/ops/addition/: test_add.py
tests/ops/subtraction/: test_subtract.py
